src/snapshots/alma__parser__tests__module_parser-4.snap
---
source: src/parser.rs
expression: "parse(\"module Test\\n\\na = 1\\n\\nb = True\")"

---
Input:

module Test

a = 1

b = True

Result:

[
    Module {
        name: Node {
            start: 7,
            end: 11,
            line: 1,
            column: 7,
            value: "Test",
        },
        exports: [],
        imports: [],
        definitions: [
            Definition {
                pattern: Node {
                    start: 13,
                    end: 14,
                    line: 3,
                    column: 0,
                    value: Identifier(
                        "a",
                    ),
                },
                value: Node {
                    start: 17,
                    end: 18,
                    line: 3,
                    column: 4,
                    value: Float(
                        1.0,
                    ),
                },
            },
            Definition {
                pattern: Node {
                    start: 20,
                    end: 21,
                    line: 5,
                    column: 0,
                    value: Identifier(
                        "b",
                    ),
                },
                value: Node {
                    start: 24,
                    end: 28,
                    line: 5,
                    column: 4,
                    value: Bool(
                        true,
                    ),
                },
            },
        ],
    },
]
