src/snapshots/alma__parser__tests__module_parser-40.snap
---
source: src/parser.rs
expression: "parse(\"\nmodule Test\n\ntype Fruit = {}\n\")"

---
Input:


module Test

type Fruit = {}


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 8,
                    end: 12,
                    line: 2,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 14,
                end: 29,
                line: 4,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 19,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [],
                    typ: Record(
                        Record(
                            Node {
                                start: 27,
                                end: 29,
                                line: 4,
                                column: 13,
                                value: Record_ {
                                    fields: [],
                                },
                            },
                        ),
                    ),
                },
            },
        ],
    },
    [],
)
