src/snapshots/alma__parser__tests__module_parser-45.snap
---
source: src/parser.rs
expression: "parse(\"\nmodule Test\n\ntype Fruit a = { a | name : String , banana: Phone }\n\")"

---
Input:


module Test

type Fruit a = { a | name : String , banana: Phone }


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 8,
                    end: 12,
                    line: 2,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 14,
                end: 66,
                line: 4,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 19,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: 25,
                            end: 26,
                            line: 4,
                            column: 11,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                    typ: Record(
                        RecordExt(
                            Node {
                                start: 29,
                                end: 66,
                                line: 4,
                                column: 15,
                                value: RecordExt_ {
                                    extension: Node {
                                        start: 31,
                                        end: 32,
                                        line: 4,
                                        column: 17,
                                        value: Identifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    fields: [
                                        (
                                            Node {
                                                start: 35,
                                                end: 39,
                                                line: 4,
                                                column: 21,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 4,
                                                    },
                                                },
                                            },
                                            App(
                                                Node {
                                                    start: 42,
                                                    end: 48,
                                                    line: 4,
                                                    column: 28,
                                                    value: Constructor_ {
                                                        name: Node {
                                                            start: 42,
                                                            end: 48,
                                                            line: 4,
                                                            column: 28,
                                                            value: CapitalizedIdentifier_ {
                                                                name: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                            },
                                                        },
                                                        params: [],
                                                    },
                                                },
                                            ),
                                        ),
                                        (
                                            Node {
                                                start: 51,
                                                end: 57,
                                                line: 4,
                                                column: 37,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 6,
                                                    },
                                                },
                                            },
                                            App(
                                                Node {
                                                    start: 59,
                                                    end: 64,
                                                    line: 4,
                                                    column: 45,
                                                    value: Constructor_ {
                                                        name: Node {
                                                            start: 59,
                                                            end: 64,
                                                            line: 4,
                                                            column: 45,
                                                            value: CapitalizedIdentifier_ {
                                                                name: SymbolU32 {
                                                                    value: 7,
                                                                },
                                                            },
                                                        },
                                                        params: [],
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            },
        ],
    },
    [],
)
