src/snapshots/alma__parser__tests__module_parser-46.snap
---
source: src/parser.rs
expression: "parse(\"\nmodule Test\n\ntype Fruit a = Banana a Phone a\n\")"

---
Input:


module Test

type Fruit a = Banana a Phone a


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 8,
                    end: 12,
                    line: 2,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 14,
                end: 45,
                line: 4,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 19,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: 25,
                            end: 26,
                            line: 4,
                            column: 11,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                    typ: Union(
                        [
                            Node {
                                start: 29,
                                end: 45,
                                line: 4,
                                column: 15,
                                value: Constructor_ {
                                    name: Node {
                                        start: 29,
                                        end: 35,
                                        line: 4,
                                        column: 15,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: 36,
                                                end: 37,
                                                line: 4,
                                                column: 22,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        ),
                                        TypeApp(
                                            Node {
                                                start: 38,
                                                end: 43,
                                                line: 4,
                                                column: 24,
                                                value: Constructor_ {
                                                    name: Node {
                                                        start: 38,
                                                        end: 43,
                                                        line: 4,
                                                        column: 24,
                                                        value: CapitalizedIdentifier_ {
                                                            name: SymbolU32 {
                                                                value: 5,
                                                            },
                                                        },
                                                    },
                                                    params: [],
                                                },
                                            },
                                        ),
                                        Var(
                                            Node {
                                                start: 44,
                                                end: 45,
                                                line: 4,
                                                column: 30,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
