src/snapshots/alma__parser__tests__module_parser-48.snap
---
source: src/parser.rs
expression: "parse(\"\nmodule Test\n\ntype Fruit a = { test : Banana a (Phone a) }\n\")"

---
Input:


module Test

type Fruit a = { test : Banana a (Phone a) }


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 8,
                    end: 12,
                    line: 2,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 14,
                end: 58,
                line: 4,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 19,
                        end: 24,
                        line: 4,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: 25,
                            end: 26,
                            line: 4,
                            column: 11,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                    typ: Record(
                        Record(
                            Node {
                                start: 29,
                                end: 58,
                                line: 4,
                                column: 15,
                                value: Record_ {
                                    fields: [
                                        (
                                            Node {
                                                start: 31,
                                                end: 35,
                                                line: 4,
                                                column: 17,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 4,
                                                    },
                                                },
                                            },
                                            App(
                                                Node {
                                                    start: 38,
                                                    end: 55,
                                                    line: 4,
                                                    column: 24,
                                                    value: Constructor_ {
                                                        name: Node {
                                                            start: 38,
                                                            end: 44,
                                                            line: 4,
                                                            column: 24,
                                                            value: CapitalizedIdentifier_ {
                                                                name: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                            },
                                                        },
                                                        params: [
                                                            Var(
                                                                Node {
                                                                    start: 45,
                                                                    end: 46,
                                                                    line: 4,
                                                                    column: 31,
                                                                    value: Identifier_ {
                                                                        name: SymbolU32 {
                                                                            value: 3,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            App(
                                                                Node {
                                                                    start: 48,
                                                                    end: 55,
                                                                    line: 4,
                                                                    column: 34,
                                                                    value: Constructor_ {
                                                                        name: Node {
                                                                            start: 48,
                                                                            end: 53,
                                                                            line: 4,
                                                                            column: 34,
                                                                            value: CapitalizedIdentifier_ {
                                                                                name: SymbolU32 {
                                                                                    value: 6,
                                                                                },
                                                                            },
                                                                        },
                                                                        params: [
                                                                            Var(
                                                                                Node {
                                                                                    start: 54,
                                                                                    end: 55,
                                                                                    line: 4,
                                                                                    column: 40,
                                                                                    value: Identifier_ {
                                                                                        name: SymbolU32 {
                                                                                            value: 3,
                                                                                        },
                                                                                    },
                                                                                },
                                                                            ),
                                                                        ],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            },
        ],
    },
    [],
)
